{
  "version": 4,
  "terraform_version": "1.3.2",
  "serial": 121,
  "lineage": "15c5156c-bae8-d81f-0181-5af38f84f47a",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "paul-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/6752edfb-9d37-4dad-a248-f66869eafbe3/resourceGroups/paulugohrg1/providers/Microsoft.Network/networkInterfaces/paul-nic",
            "internal_domain_name_suffix": "r4z31nje0koutcmasipps3ccrh.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/6752edfb-9d37-4dad-a248-f66869eafbe3/resourceGroups/paulugohrg1/providers/Microsoft.Network/virtualNetworks/paulVnet/subnets/paulsubnet"
              }
            ],
            "location": "westeurope",
            "name": "paul-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "paulugohrg1"
          },
          "dependencies": [
            "azurerm_resource_group.paulugohrg1",
            "azurerm_subnet.paulsubnet",
            "azurerm_virtual_network.paulVnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "paulsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6752edfb-9d37-4dad-a248-f66869eafbe3/resourceGroups/paulugohrg1/providers/Microsoft.Network/networkSecurityGroups/paulsg",
            "location": "westeurope",
            "name": "paulsg",
            "resource_group_name": "paulugohrg1",
            "security_rule": [],
            "tags": {
              "environment": "Production"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.paulugohrg1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "paul-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/6752edfb-9d37-4dad-a248-f66869eafbe3/resourceGroups/paulugohrg1/providers/Microsoft.Network/networkSecurityGroups/paulsg/securityRules/paul-rule",
            "name": "paul-rule",
            "network_security_group_name": "paulsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "paulugohrg1",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.paulsg",
            "azurerm_resource_group.paulugohrg1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "paulsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/6752edfb-9d37-4dad-a248-f66869eafbe3/resourceGroups/paulugohrg1/providers/Microsoft.Network/virtualNetworks/paulVnet/subnets/paulsubnet",
            "name": "paulsubnet",
            "resource_group_name": "paulugohrg1",
            "virtual_network_name": "paulVnet"
          },
          "dependencies": [
            "azurerm_resource_group.paulugohrg1",
            "azurerm_virtual_network.paulVnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "paulsecgroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6752edfb-9d37-4dad-a248-f66869eafbe3/resourceGroups/paulugohrg1/providers/Microsoft.Network/virtualNetworks/paulVnet/subnets/paulsubnet",
            "network_security_group_id": "/subscriptions/6752edfb-9d37-4dad-a248-f66869eafbe3/resourceGroups/paulugohrg1/providers/Microsoft.Network/networkSecurityGroups/paulsg",
            "subnet_id": "/subscriptions/6752edfb-9d37-4dad-a248-f66869eafbe3/resourceGroups/paulugohrg1/providers/Microsoft.Network/virtualNetworks/paulVnet/subnets/paulsubnet"
          },
          "dependencies": [
            "azurerm_network_security_group.paulsg",
            "azurerm_resource_group.paulugohrg1",
            "azurerm_subnet.paulsubnet",
            "azurerm_virtual_network.paulVnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "paulVnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "b5ddb38f-d224-499d-8980-921ef974428f",
            "id": "/subscriptions/6752edfb-9d37-4dad-a248-f66869eafbe3/resourceGroups/paulugohrg1/providers/Microsoft.Network/virtualNetworks/paulVnet",
            "location": "westeurope",
            "name": "paulVnet",
            "resource_group_name": "paulugohrg1",
            "tags": {
              "environment": "Production"
            }
          },
          "dependencies": [
            "azurerm_resource_group.paulugohrg1"
          ]
        }
      ]
    }
  ]
}